--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -5,8 +5,8 @@
     <title>List Users</title>
 </head>
 <body>
-<h2>Users</h2>
-<table border="1" style="width: 100%;">
+<h2 align="center">Users</h2>
+<table border="1" align="center">
     <thead>
     <tr>
         <th>Id</th>
@@ -33,6 +33,7 @@
     </tbody>
 </table>
 </div>
-<p><a href="/logout">Logout</a></p></div>
+<p align="center"><a href="/admin/registration">Registration</a></p>
+<p align="center"><a href="/logout">Logout</a></p></div>
 </body>
 </html>
