--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -7,7 +7,7 @@
 <body>
 <h2>Registration</h2>
 </div>
-<form action="#" th:action="@{/registration}" th:object="${user}" method="post">
+<form action="#" th:action="@{/admin/registration}" th:object="${user}" method="post">
     <label for="username">Name</label>
     <input type="text" th:field="*{username}" id="username" placeholder="Name">
     <label for="password">password</label>
